# cluster-manager

./: CMakeLists.txt  README.md  main.cpp  rpc.sh
include/cluster/detail/: cluster.hpp  network.hpp
rpc/: leader.proto
src/: network.cpp
src/pimpl/: network.hpp
src/rpc/: leader.grpc.pb.cc  leader.grpc.pb.h  leader.pb.cc  leader.pb.h  server.hpp
